--- a/homepage.html
+++ b/homepage.html
@@ -43,7 +43,7 @@
   <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
   <li class="w3-bar-item w3-button">Nama: Atmaja_19</li>
   <li class="w3-bar-item w3-button">Email: atmaja_19@gmail.com</li>
-  <a href="halamanprofil.html" class="w3-bar-item w3-button"><i>Cek Profile</i></a>
+  <a href="profil.html" class="w3-bar-item w3-button"><i>Cek Profile</i></a>
 </div>
 
 <!-- Page Content -->
@@ -53,7 +53,7 @@
   <div class="w3-container">
     <div class="topnav">
         <a class="active" href="homepage.html">Home</a>
-        <a href="halamanprofil.html">Profil</a>
+        <a href="profil.html">Profil</a>
         <a href="halamanbeli.html">Beli</a>
     </div>
   </div>
