--- a/Profil.html
+++ b/Profil.html
@@ -119,12 +119,12 @@ body {
 </div>
 
 <div class="topnav">
-  <a href="#">Home</a>
-  <a href="#">Profil</a>
-  <a href="#">Setting</a>
+  <a href="homepage.html">Home</a>
+  <a href="Profil.html">Profil</a>
+  <a href="#">Pembelian</a>
   
 </div>
-//RIYAAANNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNN
+
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
