--- a/homepage.html
+++ b/homepage.html
@@ -63,7 +63,7 @@ function w3_close() {
   <div class="item" >
     <table id="coins">
       <tr>
-        <th>Pairs</th>
+        <th >Pairs</th>
         <th>Harga</th>
         <th>Beli</th>
         <th>jual</th>
@@ -77,7 +77,7 @@ function w3_close() {
       <div class="itemk" >
         <img id="icon" src="https://indodax.com/v2/logo/png/color/btc.png" style="width: 100px; height: auto;">
         <table id="passing">
-          <tr id="saya" onclick='exfun(id)' style="cursor: pointer;">
+          <tr>
             <th>Pairs</th>
             <th>Harga</th>
             <th>Beli</th>
@@ -97,11 +97,31 @@ function w3_close() {
         <button style="float: right;">Beli</button>
       </div>
     </div>
-    </div>
+    <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"> Top Performance</h1>
+    <table id="top">
+      <tr>
+        <th>Pairs</th>
+        <th>Harga</th>
+        <th>Beli</th>
+        <th>Persentase</th>
+      </tr>
+    </table>
+    <br>
+    <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"> Top Loser</h1>
+    <table id="loser">
+      <tr>
+        <th style="background-color: red;">Pairs</th>
+        <th style="background-color: red;">Harga</th>
+        <th style="background-color: red;">Beli</th>
+        <th style="background-color: red;">Persentase</th>
+      </tr>
+    </table>
+  </div>
   </div>
   </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://www.w3schools.com/lib/w3.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
