--- a/homepage.html
+++ b/homepage.html
@@ -38,11 +38,34 @@
     </div>
   </div>
 </div>
+<div class="slideshow-container" style="text-align: center; padding: 30px;">
 
-<div style="text-align:center; padding-top: 12px;">
-    <input type="image" src="logo.png" style width="230" height="200" />
-    <h1>LORD_CRYPTO<sup><i>currency</i></sup></h1>
-</div>
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="logo.png" style width="230" height="200">
+    <div class="text"></div>
+  </div>
+  
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="Lord.png" style width="230" height="200">
+    <div class="text"></div>
+  </div>
+  
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="unnamed.jpg" style width="230" height="200">
+    <div class="text"></div>
+  </div>
+  
+  </div>
+  <br>
+  
+  <div style="text-align:center">
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+  </div>
 
 <script>
 function w3_open() {
@@ -53,7 +76,7 @@ function w3_close() {
   document.getElementById("mySidebar").style.display = "none";
 }
 </script>
-  <div style="padding: 20px;">
+  <div style="padding: 20px; text-align: center;">
     <p><b>Update data dalam: <span id="timer">0</span> Detik</b></p>
     <input type="text" value="" id="tes">
     <button id="cari" style="width: auto; height: auto;">Cari</button>
