--- a/Profil.html
+++ b/Profil.html
@@ -167,33 +167,14 @@ body {
 <span class="author-title">Teja Sukmana</span>
 </div>
 <div id="searching">
-<form action="/search" method="get">
-  <input name="q" placeholder="Cari artikel..." type="text" title="Search Content"/>
-</form>
 </div>
 <span class="closebtn"><a href="javascript:void(0)" onclick="closeSideNav()" title="Close Menu">&#x2715;</a></span>
 <ul class="menu">
- <li><a href="https://mastamvan.blogspot.com"><i class="fa fa-inbox" aria-hidden="true"></i> Inbox</a></li>
- <li><a href="https://mastamvan.blogspot.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> Outbox</a></li>
- <li><a id="submenu-1" href="javascript:void(0)" onclick="showresponddiv(this.id)"><i class="fa fa-thumb-tack" aria-hidden="true"></i> Submenu1</a>
- <ul id="opensubmenu-1" class="submenu" style="display: block;">
- <li><a href="#">Submenu1</a></li>
- <li><a href="#">Submenu2</a></li>
- <li><a href="#">Submenu3</a></li>
- </ul>
- </li>
- <li><a href="#"><i class="fa fa-camera" aria-hidden="true"></i> Camera</a></li>
- <li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i> Picture</a></li>
- <li><a href="#"><i class="fa fa-video-camera" aria-hidden="true"></i> Video</a></li>
- <li><a id="submenu-2" href="javascript:void(0)" onclick="showresponddiv(this.id)"><i class="fa fa-thumb-tack" aria-hidden="true"></i> Submenu2</a>
- <ul id="opensubmenu-2" class="submenu">
- <li><a href="#">Submenu1</a></li>
- <li><a href="#">Submenu2</a></li>
- <li><a href="#">Submenu3</a></li>
- </ul>
- </li>
- <li><a href="#"><i class="fa fa-bug" aria-hidden="true"></i> Bug</a></li>
-</ul>
+ <li><a href="https://mastamvan.blogspot.com"><i class="fa fa-inbox" aria-hidden="true"></i> Profil</a></li>
+ <li><a href="https://mastamvan.blogspot.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> Beli</a></li>
+ 
+ 
+ 
 <div class="sosmed" id="hidesosmed">
  <span class="facebook"><a href="https://facebook.com/tejasukmana99" title="Facebook"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></span>
  <span class="twitter"><a href="https://twitter.com/teja_7x" title="Twitter"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></span>
